--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,11 +22,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
-      working-directory: ./aitherapist
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
-      working-directory: ./aitherapist
+      working-directory: ./mentalhealthai
       run: |
         python manage.py test
